--- a/.classpath
+++ b/.classpath
@@ -5,11 +5,7 @@
 	<classpathentry kind="lib" path="lib/jars/jinput.jar"/>
 	<classpathentry kind="lib" path="lib/jars/jogg-0.0.7.jar"/>
 	<classpathentry kind="lib" path="lib/jars/jorbis-0.0.15.jar"/>
-	<classpathentry kind="lib" path="lib/jars/lwjgl.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="The Elder Crown/lib/natives/windows"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/jars/lwjgl.jar"/>
 	<classpathentry kind="lib" path="lib/jars/slick.jar"/>
 	<classpathentry kind="lib" path="lib/natives/natives-linux.jar"/>
 	<classpathentry kind="lib" path="lib/natives/natives-mac.jar"/>
