--- a/.classpath
+++ b/.classpath
@@ -7,10 +7,15 @@
 	<classpathentry kind="lib" path="lib/jars/jorbis-0.0.15.jar"/>
 	<classpathentry kind="lib" path="lib/jars/lwjgl.jar">
 		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/TheElderCrown/lib/javadoc/lwjgl.jar!/"/>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="TheElderCrown/lib/natives/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jars/slick.jar"/>
+	<classpathentry kind="lib" path="lib/jars/slick.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/TheElderCrown/lib/javadoc/slick.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/natives/natives-linux.jar"/>
 	<classpathentry kind="lib" path="lib/natives/natives-mac.jar"/>
 	<classpathentry kind="lib" path="lib/natives/natives-windows.jar"/>
