--- a/.classpath
+++ b/.classpath
@@ -10,25 +10,13 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/TheElderCrown/lib/javadoc/slick.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/tux/Dropbox/git/ElderCrown/lib/natives/natives-linux.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Elder Crown/lib/natives/linux"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/tux/Dropbox/git/ElderCrown/lib/natives/natives-mac.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Elder Crown/lib/natives/macosx"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/tux/Dropbox/git/ElderCrown/lib/natives/natives-windows.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Elder Crown/lib/natives/windows"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/jars/lwjgl.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Elder Crown/lib/natives/linux"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="TheElderCrown/lib/natives/windows"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/natives/natives-linux.jar"/>
+	<classpathentry kind="lib" path="lib/natives/natives-mac.jar"/>
+	<classpathentry kind="lib" path="lib/natives/natives-windows.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
