--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,10 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="TheElderCrown/lib/natives"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jars/slick.jar"/>
+	<classpathentry kind="lib" path="lib/jars/slick.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/TheElderCrown/lib/javadoc/slick.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
